--- a/src/view-home.html
+++ b/src/view-home.html
@@ -19,13 +19,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         padding: 10px;
       }
+
+      img {
+          width: 100%;
+          height: auto;
+      }
+      
+      h1 {
+        text-align: center;
+      }
+      
     </style>
 
     <div class="card">
-      <div class="circle">H</div>
-      <h1>Home</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+      <h1>Polython Ciudad de México</h1>
+      <div id="logo">
+        <img src="../images/logo.png">        
+      </div>
     </div>
   </template>
 
