--- a/src/polython-checkpoints.html
+++ b/src/polython-checkpoints.html
@@ -153,6 +153,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <view-admin name="admin" route="{{subroute}}"></view-admin>
               </template>
               <view-user name="user"></view-user>
+              <view-reto name="reto"></view-reto>              
               <view-404 name="view404"></view-404>
             </iron-pages>
           </template>
