--- a/src/view-user.html
+++ b/src/view-user.html
@@ -35,6 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          execution-time=[[item.executionTime]]
          picture-href=[[item.pictureHref]]
          location=[[item.location]]
+         active=[[item.active]]
         >
         </polython-challenge-item>
       </template>
@@ -66,7 +67,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             endTime: '13:30',
             executionTime: '13:05',
             location: 'x, y',
-            pictureHref: 'https://1.bp.blogspot.com/-LqjVHEyDImU/V7buZvy_P_I/AAAAAAAAIeQ/YzrvMSnd06YDwf7heYz53qMg6rEm5GJWACLcB/s640/14045890_318329811851920_8508340804919828659_n.jpg'
+            pictureHref: 'https://1.bp.blogspot.com/-LqjVHEyDImU/V7buZvy_P_I/AAAAAAAAIeQ/YzrvMSnd06YDwf7heYz53qMg6rEm5GJWACLcB/s640/14045890_318329811851920_8508340804919828659_n.jpg',
+            active: true
           },
           {
             title: 'Checkpoint goloso',
@@ -75,7 +77,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             endTime: '15:30',
             executionTime: '15:21',
             location: 'x, y',
-            pictureHref: 'http://www.bellabeat.com/blog/media/Indulging-in-a-sweet-affair-with-chocolate-000048186060_Small.jpg'
+            pictureHref: 'http://www.bellabeat.com/blog/media/Indulging-in-a-sweet-affair-with-chocolate-000048186060_Small.jpg',
+            active: false
           },          
           {
             title: 'Checkpoint con frida',
@@ -83,7 +86,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             startTime: '17:00',
             endTime: '17:30',
             executionTime: undefined,
-            location: undefined
+            location: undefined,
+            active: false
           }          
         ]
       }
